[gd_scene load_steps=4 format=2]

[ext_resource path="res://tools/ParticlesBattery.tscn" type="PackedScene" id=1]
[ext_resource path="res://paddle/PaddleHitSparks.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.880021, 0.925879, 0.0782984, 1, 1, 1, 1, 1 )

[node name="PaddleHitSparks" type="Node2D"]
script = ExtResource( 2 )

[node name="ParticlesBattery" parent="." instance=ExtResource( 1 )]

[node name="BallHitSparks" type="CPUParticles2D" parent="ParticlesBattery"]
scale = Vector2( 0.5, 1 )
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.1
angular_velocity = 25.0
linear_accel = 50.0
linear_accel_random = 0.5
color = Color( 0.858824, 1, 0, 1 )

[node name="BallHitSparks2" type="CPUParticles2D" parent="ParticlesBattery"]
scale = Vector2( 0.5, 1 )
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.1
angular_velocity = 25.0
linear_accel = 50.0
linear_accel_random = 0.5
color = Color( 0.858824, 1, 0, 1 )

[node name="BallHitSparks3" type="CPUParticles2D" parent="ParticlesBattery"]
scale = Vector2( 0.5, 1 )
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.1
angular_velocity = 25.0
linear_accel = 50.0
linear_accel_random = 0.5
color = Color( 0.858824, 1, 0, 1 )

[node name="ParticlesBattery2x" parent="." instance=ExtResource( 1 )]

[node name="BallHitSparks" type="CPUParticles2D" parent="ParticlesBattery2x"]
scale = Vector2( 0.5, 1 )
emitting = false
amount = 25
lifetime = 0.9
one_shot = true
explosiveness = 1.0
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 350.0
initial_velocity_random = 0.1
angular_velocity = 25.0
linear_accel = 150.0
linear_accel_random = 0.5
scale_amount = 1.5
color_ramp = SubResource( 1 )

[node name="BallHitSparks2" type="CPUParticles2D" parent="ParticlesBattery2x"]
scale = Vector2( 0.5, 1 )
emitting = false
amount = 25
lifetime = 0.9
one_shot = true
explosiveness = 1.0
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 350.0
initial_velocity_random = 0.1
angular_velocity = 25.0
linear_accel = 150.0
linear_accel_random = 0.5
scale_amount = 1.5
color_ramp = SubResource( 1 )

[node name="BallHitSparks3" type="CPUParticles2D" parent="ParticlesBattery2x"]
scale = Vector2( 0.5, 1 )
emitting = false
amount = 25
lifetime = 0.9
one_shot = true
explosiveness = 1.0
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 350.0
initial_velocity_random = 0.1
angular_velocity = 25.0
linear_accel = 150.0
linear_accel_random = 0.5
scale_amount = 1.5
color_ramp = SubResource( 1 )

[node name="ParticlesBattery3x" parent="." instance=ExtResource( 1 )]

[node name="BallHitSparks" type="CPUParticles2D" parent="ParticlesBattery3x"]
scale = Vector2( 0.5, 1 )
emitting = false
amount = 50
lifetime = 0.75
one_shot = true
explosiveness = 1.0
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.2
angular_velocity = 25.0
linear_accel = 200.0
linear_accel_random = 0.5
scale_amount = 2.2
color_ramp = SubResource( 1 )

[node name="BallHitSparks2" type="CPUParticles2D" parent="ParticlesBattery3x"]
scale = Vector2( 0.5, 1 )
emitting = false
amount = 50
lifetime = 0.75
one_shot = true
explosiveness = 1.0
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.2
angular_velocity = 25.0
linear_accel = 200.0
linear_accel_random = 0.5
scale_amount = 2.2
color_ramp = SubResource( 1 )

[node name="BallHitSparks3" type="CPUParticles2D" parent="ParticlesBattery3x"]
scale = Vector2( 0.5, 1 )
emitting = false
amount = 50
lifetime = 0.75
one_shot = true
explosiveness = 1.0
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.2
angular_velocity = 25.0
linear_accel = 200.0
linear_accel_random = 0.5
scale_amount = 2.2
color_ramp = SubResource( 1 )
